Use container's memory limit in Solr shard